# sqlito

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  ParserExample.cpp  createQuery.cpp  deleteQuery.cpp  generateDisk.cpp  insertQuery.cpp  selectQuery.cpp  testSQLito.cpp  updateQuery.cpp
include/: SQLito.hpp
include/Parser/: Command.hpp  Parser.hpp
lib/inc/sqlito/: Command.h  Disk.h  DiskManager.h  Parser.h  Schema.h  Table.h  sqlito.h
lib/inc/sqlito/utils/: Converter.h  File.h
lib/src/: Command.cpp  Disk.cpp  DiskManager.cpp  Parser.cpp  Schema.cpp  sqlito.cpp
lib/src/utils/: File.cpp
src/Parser/: Command.cpp  Parser.cpp
test/: SQLitoTest.cpp
